mus: Fix shelf panel item minimize and unminimize.

Use WindowState Activate and Minimize functions, not wm_util.
Explicitly call Unminimize for panel window items in Mus.

Bug: 769520
Test: See bug.
Change-Id: Id181e463b6f574657e8ccb162ab8a6dfc9b3652c